# siamese-confidence

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ruff-lint.yml
examples/: basic_usage.py  demo_model.json  usage_example.py
src/siamese_confidence/: __init__.py  core.py  models.py  utils.py
tests/: __init__.py  test_core.py  test_models.py
